# PaddleOCR-BM1684Demo

./: CMakeLists.txt  README.md
driver/arm_pcie/driver/: bm_api.h  bm_api.o.ur-safe  bm_attr.c  bm_bgm.c  bm_boot_info.c  bm_cdma.c  bm_cdma.h  bm_ctl.c  bm_ddr.h  bm_debug.c  bm_fops.c  bm_fw.c  bm_genalloc.c  bm_genalloc.o.ur-safe  bm_gmem.c  bm_irq.c  bm_memcpy.h  bm_memcpy.o.ur-safe  bm_msg.h  bm_msgfifo.c  bm_msgfifo.h  bm_msgfifo.o.ur-safe  bm_pcie_drv.c  bm_soc_drv.c  bm_thread.c  bm_timer.c  bm_uapi.h  bm_wdt.h  gpio.c  gpio.h  i2c.c  i2c.h  pwm.c  spi.h  uart.c
driver/arm_pcie/driver/bm1682/: bm1682_card.c  bm1682_card.h  bm1682_eu_cmd.h  bm1682_firmware_tcm.h  bm1682_gmem.c  bm1682_irq.c  bm1682_msgfifo.h  bm1682_pcie.c  bm1682_pcie.h  bm1682_smmu.h  bm1682_smmu.o.ur-safe  bm1682_soc_firmware_ddr.h  bm1682_soc_firmware_tcm.h
driver/arm_pcie/driver/bm1684/: bm1684_base64.c  bm1684_base64.h  bm1684_card.c  bm1684_card.h  bm1684_cdma.c  bm1684_cdma.h  bm1684_clkrst.c  bm1684_ddr.c  bm1684_ddr.h  bm1684_firmware_ddr.h  bm1684_gmem.c  bm1684_gmem.h  bm1684_irq.h  bm1684_jpu.h  bm1684_msgfifo.h  bm1684_perf.c  bm1684_perf.h  bm1684_pld_ddr.c  bm1684_smbus.h  bm1684_smmu.o.ur-safe
driver/arm_pcie/driver/vpu/: config.h  vmm.h  vmm_type.h  vpu.h  vpuconfig.h
driver/x86/driver/: Makefile  bm_api.c  bm_attr.h  bm_bgm.h  bm_boot_info.h  bm_card.c  bm_card.h  bm_common.h  bm_ctl.h  bm_debug.h  bm_drv.c  bm_drv.h  bm_fw.h  bm_genalloc.h  bm_gmem.h  bm_io.c  bm_io.h  bm_irq.h  bm_memcpy.c  bm_memcpy.o.ur-safe  bm_pcie.h  bm_thread.h  bm_timer.h  bm_trace.c  bm_trace.h  bm_wdt.c  l2_sram_table.h  pwm.h  run_driver.sh  spi.c  uart.h
driver/x86/driver/bm1682/: bm1682_cdma.c  bm1682_cdma.h  bm1682_ddr.c  bm1682_ddr.h  bm1682_firmware_ddr.h  bm1682_gmem.h  bm1682_irq.h  bm1682_msgfifo.c  bm1682_reg.h  bm1682_smmu.c  bm1682_smmu.o.ur-safe
driver/x86/driver/bm1684/: bm1684_clkrst.h  bm1684_firmware_tcm.h  bm1684_flash.c  bm1684_flash.h  bm1684_irq.c  bm1684_jpu.c  bm1684_lpddr4.c  bm1684_lpddr4.h  bm1684_msgfifo.c  bm1684_pcie.c  bm1684_pcie.h  bm1684_reg.h  bm1684_smbus.c  bm1684_smmu.c  bm1684_smmu.h  bm1684_smmu.o.ur-safe  bm1684_vpp.c  bm1684_vpp.h  temp_def.h
driver/x86/driver/vpu/: vpu.c
include/: bmodel_base.hpp  config.h  ocr_cls.h  ocr_det.h  ocr_det_bm.hpp  ocr_rec.h  ocr_rec_bm.hpp  postprocess_op.h  preprocess_op.h  utility.h
inference/: det_db.bmodel
models/rec_crnn/: model  rec_cnn.bmodel
models/rec_crnn/rcnn_model/: __model__  ctc_fc_b_attr  ctc_fc_w_attr  lstm_cell_0.b_0  lstm_cell_0.b_1  lstm_cell_0.w_0  lstm_cell_0.w_1  lstm_cell_1.b_0  lstm_cell_1.b_1  lstm_cell_1.w_0  lstm_cell_1.w_1  lstm_cell_2.b_0  lstm_cell_2.b_1  lstm_cell_2.w_0  lstm_cell_2.w_1  lstm_cell_3.b_0  lstm_cell_3.b_1  lstm_cell_3.w_0  lstm_cell_3.w_1  lstm_st1_fc1_b  lstm_st1_fc1_w  lstm_st1_fc2_b  lstm_st1_fc2_w  lstm_st1_out1_b  lstm_st1_out1_w  lstm_st1_out2_b  lstm_st1_out2_w  lstm_st2_fc1_b  lstm_st2_fc1_w  lstm_st2_fc2_b  lstm_st2_fc2_w  lstm_st2_out1_b  lstm_st2_out1_w  lstm_st2_out2_b  lstm_st2_out2_w
src/: bmodel_base.cpp  config.cpp  main.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_det_bm.cpp  ocr_rec.cpp  ocr_rec_bm.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
tools/: build.sh  build_arm.sh  build_x86.sh  config.txt  run.sh
x86/: bm-smi  bm_firmware_update  bmrt_test  test_cdma_perf  test_gdma_perf  test_perf  test_update_fw  update_boot_info
x86/calibration-tools/: calibration_use_pb  convert_imageset  dump_tensor_data_use_pb  ufw
x86/conv_power_test/: conv_power_test_device.asm  conv_power_test_device.hex.sim  conv_power_test_device.map  conv_power_test_device_s.hex.sim  conv_power_test_host
x86/conv_power_test/device/: conv_power_test.d
x86/conv_power_test/host/: conv_power_test.d
